--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.7.2
 certifi==2023.7.22
 charset-normalizer==3.3.2
+colorama==0.4.6
 dj-database-url==2.1.0
 Django==4.2.7
 django-cors-headers==4.3.0
@@ -8,7 +9,9 @@ gunicorn==21.2.0
 idna==3.4
 packaging==23.2
 psycopg2-binary==2.9.9
+pypng==0.20220715.0
 pytz==2023.3.post1
+qrcode==7.4.2
 requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
